  microgaming, ongame, cryptologic, pacific, fulltilt, b2b, tribeca, worldpex, ipoker, tain,
  bodog, everest, boss, and betfair. (quiqsilver)

- OpenHoldem will now use Poker Tracker data when connected to ManualMode if s$network or
  s$sitename in ManualMode's table map is set to a Poker Tracker compatible name. (quiqsilver)
  
- Integration of the ActiveState Perl interpreter. (TheHighFish)

- Automatic poker chat for formula and DLL level. (TheHighFish)  


BUG FIXES:
- OpenHoldem no longer performs unnecessary Poker Tracker database queries when we are not using
  a compatible site. (quiqsilver)

- ishandup and ishandupcommon now determined using memories of the high bits of pokerval rather than
  the raw return from hand_eval_N (Matrix)
  
- Formula Dialog stays open untill File->New and File->Open completes. Toolbar button 
  sometimes stays pressed after Formula Dialog gets closed. (jumpingfences)
  
- Removed some circular dependences between some non-GUI modules and MainFrm and OpenHoldem 
  by moving sessionnum, g_tlist, startup_path to CGlobal. Uncoupled symbols from PokerPro. (jumpingfences)
  
- Preferences tabs sorted in alphabetical order. (TheHighFish)

- Detection of divide-by-zero expressions has been corrected/enhanced for situations that include invalid
  symbols (OpenHoldem)

- ishiflush and ishistraight now properly represent having the highest possible true hand of the respective
  type.  This does not include hands of a different rank, such as royal flushes and straight flushes.
  (Thanks, PokerBandit1 and Winngy) (quiqsilver)
  

v1.6.0 2008-02-22
NEW STUFF:
- Table maps using fuzzy fonts are now utilized correctly in the scraper engine.

- OpenHoldem and OpenScrape now use an identical CTransform class (this is found in the
  transform.cpp/.h files).
  
- Formula Editor (Thanks Spew for the code)
  - Added help links to Wiki and Forum (Help/Wiki, Help/Forum)